--- a/pages/workoutKaizen.html
+++ b/pages/workoutKaizen.html
@@ -24,10 +24,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="pages/oneKaizen.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/aboutKaizen.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/serviceKaizen.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/workoutKaizen.html">Workouts</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/aboutKaizen.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/serviceKaizen.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/pages/workoutKaizen.html">Workouts</a></li>
                 </ul>
             </div>
         </div>
