--- a/aboutKaizen.html
+++ b/aboutKaizen.html
@@ -25,9 +25,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pages/aboutKaizen.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pages/serviceKaizen.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/pages/workoutKaizen.html">Workouts</a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutKaizen.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="serviceKaizen.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="workoutKaizen.html">Workouts</a></li>
                 </ul>
             </div>
         </div>
