--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <!-- Hero Section -->
     <header class="text-black text-start py-5" id="hero">
         <div class="heroContainer">
-            <h1 style="font-family: Impact; font-weight: 400;"><span class="one">ONE-KAIZEN</span> FITNESS</h1>
-            <p style="font-family: Impact; font-weight: 300; ">CONTINUOUS IMPROVEMENT TO YOUR FITNESS, MENTALITY AND LIFESTYLE</p><br><br><br>
+            <span class="hero-title"><h1 style="font-weight: 400;"><span class="one">ONE-KAIZEN</span> FITNESS</h1></span>
+            <span class="hero-subtitle"><p style="font-weight: 300; ">CONTINUOUS IMPROVEMENT TO YOUR FITNESS, MENTALITY AND LIFESTYLE</p></span><br><br><br>
             <a href="https://web.facebook.com/people/One-Kaizen-Fitness/100083270234483/" class="btn" style="background-color: #ffa006; color:black;" target="_blank"><i class="bi bi-telephone"></i> Contact Us</a>
             <a href="https://www.google.com/maps/place/One-Kaizen+Fitness/@14.847406,120.7247673,23358m/data=!3m1!1e3!4m10!1m2!2m1!1smaps+one+kaizen!3m6!1s0x3396532dae2699d5:0xf2ba805cee6dcf81!8m2!3d14.8473746!4d120.8594872!15sCg9tYXBzIG9uZSBrYWl6ZW5aDCIKb25lIGthaXplbpIBDmZpdG5lc3NfY2VudGVymgEjQ2haRFNVaE5NRzluUzBWSlEwRm5TVU5zTFhSUFdsVkJFQUXgAQD6AQUI_gEQNA!16s%2Fg%2F11l5qk4csf?entry=ttu&g_ep=EgoyMDI1MDIxMC4wIKXMDSoASAFQAw%3D%3D" class="btn" style="background-color: white; color: black;" target="_blank"><i class="bi bi-send"></i> Explore</a>
         </div>
